added pics to index

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id = "topTitle">Black Representation</div>
         <div id = "issuePages">
             <a class = "pages" href="whiteWashing.html">
+                <div id = "imgW"></div>
                 <div class = "pageDescription">
                     <p>Can you imagine relating to your favorite character in an animated show, feeling connected and even understood. To then find out that the person who voices them looks nothing like the character they voiced. </p>
                     <p>Im not talking clothing or hair but instead skin color. </p>
@@ -22,12 +23,14 @@
                 <div class="pageTitle">whiteWashing</div>
             </a>
             <a class = "pages" href="stereotypes.html">
+                <div id = "imgS"></div>
                 <div class = "pageDescription">
                     Imagine walking into a store and the owner greets you and asks if they can help you find anything. You respectfully decline and mention that you are simply browsing their selection. The owner then proceeds to follow you around the establishment, why? Simply because you were black and wearing a black hoodie.
                 </div>
                 <div class="pageTitle">stereotypes</div>
             </a>
             <a class = "pages" href="sideCharacter.html">
+                <div id = "imgSC"></div>
                 <div class = "pageDescription">
                     <p>Have you ever noticed that in many shows and movies, behind every amazing white lead character there is a black side character.... no?</p>
                     <p>Well why dont I enlighten you.</p>
